--- a/product-details.html
+++ b/product-details.html
@@ -437,8 +437,8 @@
                                         <li><a href="#">My Account</a></li>
                                         <li><a href="cart.html">My Cart</a></li>
                                         <li><a href="#">Login</a></li>
-                                        <li><a href="wishlist.html">Wishlist</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
+                                        <li><a href="#">Wishlist</a></li>
+                                        <li><a href="#">Checkout</a></li>
                                     </ul>
                                 </div>
                             <!--</div>-->
